# stxxl

./: meson.build
include/stxxl/bits/: config.h.in  meson.build
